# cpp_presentation_2025

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp
